# Holmes

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt
config/: db_config.json  input_GRCh38_template.json  score.json  vep_config.json
docs/: Database.md  VEP.md
include/Sherloc/: disease_database.hpp  option_parser.hpp  sherloc_member.hpp  specialcase.hpp  variant.hpp  version.h
include/Sherloc/Attr/: allele.hpp  clinical_keywords.hpp  inheritance_patterns.hpp  rule.hpp  utils.hpp
include/Sherloc/DB/: clinvar.hpp  coverage.hpp  db.hpp  dbset.hpp  exac.hpp  fasta.hpp  gene_info.hpp  gnom.hpp  gtf.hpp  hts.hpp  k.hpp  uniprot.hpp  vcf.hpp  vep.hpp
include/Sherloc/Patient/: other_patient.hpp  patient.hpp
include/Sherloc/app/archive_compressor/: main.hpp
include/Sherloc/app/database_builder/: main.hpp
include/Sherloc/app/disease_json_builder/: main.hpp
include/Sherloc/app/sherloc/: clinical.hpp  filemaker.hpp  main.hpp  population.hpp  predict.hpp  sherloc_consequence.hpp  sherloc_parameter.hpp  variant_rule.hpp
include/Sherloc/app/vep_cache_builder/: main.hpp
include/Sherloc/app/vep_cache_query/: main.hpp
scripts/: build_omim.py  clinvar_query.py  clinvar_vep_annotation.py  clinvar_xml_extract_specialcase.py  compound_heterozygous_candidate.py  compress_db.py  convert_gnomad.py  download_dbsource.sh  gnomad_query_example.py  input_helper.py  make_db_config.py  make_vep_config.py  patient_json_builder.py  phenotype2gene.py  run_one.sh
src/Sherloc/app/: archive_compressor.cpp  database_builder.cpp  disease_json_operation.cpp  sherloc.cpp  vep_cache_builder.cpp  vep_cache_query.cpp
tests/: CMakeLists.txt  main.cpp
tests/Sherloc/Attr/: allele.cpp
tests/Sherloc/DB/: clinvar.cpp  coverage.cpp  dvd.cpp  fasta.cpp  hts.cpp  k.cpp  uniprot.cpp  vcf.cpp  vep.cpp
tests/Sherloc/app/sherloc/: predict.cpp  sherloc_parameter.cpp
tests/data/clinvar/: clinvar_test.annotated.vcf.gz.tbi
tests/data/dvd/: dvd_test.vcf
tests/data/k_genome/: multi_chr_test.vcf
tests/data/trio/: child.vcf  dad.vcf  mom.vcf
tests/data/vcf/: util.vcf
